<resources>
    <string name="app_name">UAS 180030066 4</string>
    <string name="id_film">ID Film</string>
    <string name="judul_film">Judul Film</string>
    <string name="tgl_film">Tanggal Rilis</string>
    <string name="gambar">Ilustrasi Gambar</string>
    <string name="Sutradara">Sutradara film</string>
    <string name="penulis">Penulis Naskah</string>
    <string name="Sinopsis">Sinopsis film</string>
    <string name="link">Link Film</string>
    <string name="tambah">Tambah Berita</string>
    <string name="edit">Sinopsis Film</string>
    <string name="hapus">Hapus Data</string>
    <string name="bagikan">Bagikan Film</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="data_film">Data film</string>
    <string name="pilih_tgl">Pilih</string>

</resources>
